[tool.ruff]
line-length = 120

[tool.poetry]
name = "heimdall"
version = "0.2.0"
description = "Systems monitoring service"
authors = ["Aleksander Skraastad <myth@overflow.no>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
databases = "^0.9.0"
aiosqlite = "^0.20.0"
python-decouple = "^3.8"
aiohttp = "^3.9.5"
python-dateutil = "^2.9.0.post0"
aiosmtplib = "^3.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
