[project]
name = "heimdall"
version = "0.2.0"
description = "Systems monitoring service"
authors = ["Aleksander S. <myth@overflow.no>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.13",
    "aiosmtplib>=4.0.0",
    "aiosqlite>=0.21.0",
    "databases>=0.9.0",
    "fastapi>=0.115.11",
    "python-dateutil>=2.9.0.post0",
    "python-decouple>=3.8",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
